maybank-02/02-01b-sinatra-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sinatra-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: sinatra
  replicas: 2
  template:
    metadata:
      labels:
        app: sinatra
    spec:
      containers:
      - name: sinatra
        image: "tongueroo/sinatra"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sinatra-main-app-file-volume
          mountPath: /app
      volumes:
        - name: sinatra-main-app-file-volume
          configMap:
            name: sinatra-main-app-file

---

apiVersion: v1
kind: Service
metadata:
  name: sinatra-service
  namespace: dev
  labels:
    app: sinatra
spec:
  type: ClusterIP
  selector:
    app: sinatra
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
